--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html,body{
   padding: .5rem;
   display: block;
 }
-
+.btn-canel-student{float:right;}
 /*organisation*/
 .organisation{
   margin:-2rem 0 3rem 0;
@@ -31,8 +31,9 @@ html,body{
 .organisation .org-logo {
 
 }
+.edit-student {margin:0;padding:0!important;}
 /* modal */
-.modal-dialog {max-width:55%;}
+/* .modal-dialog {max-width:55%;} */
 /* Student grid */
 .student-details ul.grid {
   list-style:none;
@@ -48,17 +49,17 @@ html,body{
   float: left;
   vertical-align:middle;
 }
-.student-details ul.grid li:nth-child(2n){background-color:whitesmoke;}
+.student-details ul.grid li:nth-child(2n + 1){background-color:whitesmoke;}
 .student-details ul.grid li:first-child{border-top: .07rem dashed #ebedf2;}
 .student-details ul.grid li div {float:left;padding:1rem;vertical-align: middle;}
-.student-details .student{width:40%;}
-.student-details .student-name {font-weight:600;display: block;}
+.student-details .student{width: 35%;}
+.student-details .student-name {/*font-weight:600;*/display: block;}
 .student-details .student-arn {color:#676767;}
-.student-details .edit {width:25%;}
-.student-details .delete {width:30%;}
+.student-details .edit {width: 30%;}
+.student-details .delete {width: 30%;/* float: right; */text-align: right;padding: .4rem 0!important;}
 .payment-summary{margin-bottom: 3rem;}
-
-
+.edit-student {background-color:#f6f6f6;}
+#none {background-color: whitesmoke;}
  /* Licence */
 .licence-card {
   display: block;
@@ -84,8 +85,16 @@ html,body{
 .m-t-0{margin-top:0rem!important;}
 .m-t-1{margin-top:.8rem!important;}
 .m-t-2{margin-top:2rem!important;}
+.m-t-3{margin-top:2.5rem!important;}
+.p-t-0{padding-top:0!important;}
 .save-exit{margin-top:4rem;border-top:1px solid #e1e8ed;padding:2rem 0;}
 .hidden {display: none; visibility: hidden;height:0px;}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.bg-dark {background-color:#bbbbbb!important;}
 /*Form help*/
 label,.label{
   display: block!important;
@@ -158,7 +167,7 @@ label,.label{
     max-width: 70%;
   }
 }
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 767px) {
   /*.lg-hidden{
     display:block;
     visibility:visible;
@@ -184,11 +193,11 @@ label,.label{
     border:none;
     border-radius:0;
   }
+  #addPilot.m-t-3 {margin-top:0!important;}
 }
 @media only screen and (max-width: 420px) {
-  .student-details .student{width:45%;}
+  .student-details .student{width:38%;}
   .student-details ul.grid li div {padding-right:0;}
-}
-@media only screen and (max-width: 420px) {
-  .student-details .edit span, .student-details .delete span{display:none; visibility: hidden;}
+/*  .student-details .edit span, .student-details .delete span{display:none; visibility: hidden;}*/
+
 }
