--- a/css/main.css
+++ b/css/main.css
@@ -24,8 +24,8 @@ html,body{
 .organisation{
   margin:-2rem 0 3rem 0;
   padding: 4rem 0 2rem 0;
-  background: #fafafa;
-  border-bottom: 1px solid #e1e8ed;
+  /*background: #fafafa;
+  border-bottom: 1px solid #e1e8ed;*/
   color: #454545;
 }
 .organisation .org-logo {
@@ -85,7 +85,7 @@ html,body{
 .m-t-0{margin-top:0rem!important;}
 .m-t-1{margin-top:.8rem!important;}
 .m-t-2{margin-top:2rem!important;}
-.m-t-3{margin-top:2.5rem!important;}
+.m-t-3{margin-top:3rem!important;}
 .p-t-0{padding-top:0!important;}
 .save-exit{margin-top:4rem;border-top:1px solid #e1e8ed;padding:2rem 0;}
 .hidden {display: none; visibility: hidden;height:0px;}
@@ -102,6 +102,7 @@ label,.label{
   font-size: 1rem;
   font-weight: 600;
 }
+
 .au-text-input {width:100%!important;}
 .form-text{
   color: #676767;
@@ -116,8 +117,11 @@ label,.label{
   float:left;
   margin: .5rem 0 1rem 0;
 }
+.form-error {
+  border-color: #ff635c;
+}
 .form-required{
-  color: #bc111e;
+  color: #ff635c;
   margin-bottom: 8px;
   margin-top: 10px;
 }
