--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ html,body{
 .m-t-3{margin-top:3rem!important;}
 .m-t-4{margin-top:4rem!important;}
 .p-t-0{padding-top:0!important;}
+.padding-0{padding:0!important;}
 .save-exit{margin-top:4rem;border-top:1px solid #e1e8ed;padding:2rem 0;}
 .hidden {display: none; visibility: hidden;height:0px;}
 input[type=number]::-webkit-inner-spin-button,
