--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ html,body{
 .au-header__brand .au-header__brand-image{
   max-width:15rem;
 }
+.au-body p {max-width:100%!important;}
 .au-body.au-body--dark{background: #0080A2;}
 .au-header {padding:1.8rem 0;!important}
 .au-btn--secondary {background-color: #ffffff!important;}
@@ -52,11 +53,12 @@ html,body{
 .student-details ul.grid li:nth-child(2n + 1){background-color:whitesmoke;}
 .student-details ul.grid li:first-child{border-top: .07rem dashed #ebedf2;}
 .student-details ul.grid li div {float:left;padding:1rem;vertical-align: middle;}
+.student-details ul.grid li {position:relative;}
 .student-details .student{width: 35%;}
 .student-details .student-name {/*font-weight:600;*/display: block;}
 .student-details .student-arn {color:#676767;}
-.student-details .edit {width: 30%;}
-.student-details .delete {width: 30%;/* float: right; */text-align: right;padding: .4rem 0!important;}
+.student-details .edit {width: 24%;}
+.student-details .delete, .student-details .delete-repl {/*width: 15%; float: right; *//* text-align: right; */padding: .4rem 0!important;}
 .payment-summary{margin-bottom: 3rem;}
 .edit-student {background-color:#f6f6f6;}
 #none {background-color: whitesmoke;}
@@ -90,6 +92,7 @@ html,body{
 .m-t-4{margin-top:4rem!important;}
 .p-t-0{padding-top:0!important;}
 .padding-0{padding:0!important;}
+.p-r-1{padding-right:1.5rem!important;}
 .save-exit{margin-top:4rem;border-top:1px solid #e1e8ed;padding:2rem 0;}
 .hidden {display: none; visibility: hidden;height:0px;}
 input[type=number]::-webkit-inner-spin-button,
@@ -113,7 +116,9 @@ label,.label{
   font-size: 1rem;
   font-weight: 600;
 }
-
+/*#surname-input {
+  text-transform: capitalize;
+}*/
 .au-text-input {width:100%!important;}
 .form-text{
   color: #676767;
@@ -194,6 +199,7 @@ footer{
 	overflow:hidden;
 	width:100%;
 }
+.hidden-md-up {display: none; visibility: hidden;height: 0px;}
 /* hidden viewport */
 /*.lg-hidden{
   display:none;
@@ -214,32 +220,43 @@ footer{
     display:none;
     visibility: hidden;
   }*/
-  .student, .edit, .delete {diaplay:block;float: left;}
+  /*.delete {position:absolute; top:0; right:0;}*/
+  /*.student, .edit, .delete {diaplay:block;float: left;}*/
+  /*.delete a {position:absolute;right:0;bottom:78px; z-index: 99;}*/
+  .payment {position:absolute;right:0;bottom:98px; z-index: 99;}
+
+
   .organisation {
     margin: -2rem 0 1rem 0;
     padding: 3rem 0 1rem 0;
   }
   .au-body h2, .au-body .au-display-xl, .au-display-xl{font-size:1.5rem;}
   .au-body h3, .au-body .au-display-lg, .au-display-lg {font-size:1.2rem;}
-/*  .modal-dialog{
-    max-width: 100%;
-    margin: 0;
-    border-radius: 0;
-    border: none;
+  .container{
+  	max-width:660px;
   }
-  .modal-content {
-    border:none;
-    border-radius:0;
-  }*/
+  .grid{margin:0 1rem;}
+
+  .hidden-sm-down {display: none; visibility: hidden;height: 0px;}
+  .hidden-md-up {display: block; visibility: visible;}
   #addPilot.m-t-3 {margin-top:0!important;}
+  /*.delete .fa, .fas {display:none;visibility:hidden;}*/
+  .payment-total {position: absolute;right:0;margin:1rem;}
+  .delete a {margin-top:-5rem; padding-left:1rem;}
+  .mobile-margin{margin-top:-1rem;}
 }
 @media only screen and (max-width: 574px) {
   ul {margin:0 .8rem;}
 }
 @media only screen and (max-width: 420px) {
+  .hidden-sm-down {display:none;visibility:hidden;height: 0;}
   .student-details .student{width:38%;}
   .student-details ul.grid li div {padding-right:0;}
 /*  .student-details .edit span, .student-details .delete span{display:none; visibility: hidden;}*/
+
+}
+@media only screen and (max-width: 369px) {
+/*.delete a {position:absolute;right:0;bottom:100px; z-index: 99;}*/
 
 }
 .westpac .au-header {background-color:#555555;}
@@ -262,4 +279,8 @@ footer{
 }
 .westpac footer{
   background-color: #efece3;
+}
+.badge-info {
+    color: #fff;
+    background-color: #0e8496;
 }
